--- a/src/pages/components/Styles/Hero.css
+++ b/src/pages/components/Styles/Hero.css
@@ -5,12 +5,17 @@
   align-items: center;
 }
 
-.input-text {
+.input-text-mane {
   margin-right: 5%;
+}
+
+.input-text-mane {
+  margin-left: 5%;
 }
 
 .input-button {
   margin-left: 5%;
+  margin-right: 5%;
 }
 
 .title-wrap {
